[package]
name = "pdrive-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json"]}
futures = { version = "0" }
confy = { version = "0" }
serde = { version = "1.0", features = ["derive"] }
